--- a/package.json
+++ b/package.json
@@ -10,10 +10,38 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.1.1",
-    "react-native": "0.82.1",
+    "@azure/msal-browser": "4.26.2",
+    "@azure/msal-common": "15.13.2",
+    "@expo/metro-runtime": "^6.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.82.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "@react-navigation/bottom-tabs": "^7.0.20",
+    "@react-navigation/native": "^7.0.20",
+    "@react-navigation/stack": "^7.0.20",
+    "@tanstack/react-query": "^5.68.2",
+    "axios": "^1.7.9",
+    "base-64": "^1.0.0",
+    "expo": "^54.0.25",
+    "expo-linear-gradient": "~15.0.7",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-native": "0.82.1",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-config": "^1.5.3",
+    "react-native-gesture-handler": "^2.23.5",
+    "react-native-keychain": "^9.1.0",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-msal": "^4.0.4",
+    "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.8.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.21.2",
+    "react-native-webview": "^13.16.0",
+    "react-native-worklets-core": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -26,8 +54,9 @@
     "@react-native/eslint-config": "0.82.1",
     "@react-native/metro-config": "0.82.1",
     "@react-native/typescript-config": "0.82.1",
+    "@types/base-64": "^1.0.2",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.1",
+    "@types/react": "19.1.10",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
