--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,8 @@
 # Aspayr Mobile Environment Variables
 # Copy this file to .env and fill in your values
 
-# Backend API Configuration (Required)
-API_BASE_URL=https://your-backend-api-url.com
-
-# Microsoft Authentication (Optional - for SSO)
-MSAL_CLIENT_ID=your-azure-ad-client-id
-MSAL_AUTHORITY=https://login.microsoftonline.com/common
-
-# Optional: Debug mode
-DEBUG=true
+EXPO_PUBLIC_MSAL_CLIENT_ID=xxxxxx-8672-4bdc-933f-fc4c3231e361
+EXPO_PUBLIC_MSAL_TENANT_ID=xxxxxxxx-87cb-43b2-8483-6d1700834927
+EXPO_PUBLIC_MSAL_AUTHORITY=https://login.microsoftonline.com/xxxx
+EXPO_PUBLIC_MSAL_REDIRECT_URI=http://localhost:8081
+EXPO_PUBLIC_API_BASE_URL=http://localhost:4000
