--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "web": "expo start --web",
     "test": "jest"
   },
   "dependencies": {
@@ -22,7 +23,11 @@
     "axios": "^1.7.9",
     "base-64": "^1.0.0",
     "expo": "^54.0.25",
+    "expo-auth-session": "~7.0.9",
+    "expo-constants": "~18.0.6",
+    "expo-crypto": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
+    "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
