--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native/new-app-screen": "0.81.5",
     "@react-navigation/bottom-tabs": "^7.0.20",
     "@react-navigation/native": "^7.0.20",
+    "@react-navigation/native-stack": "^7.8.5",
     "@react-navigation/stack": "^7.0.20",
     "@tanstack/react-query": "^5.68.2",
     "axios": "^1.7.9",
@@ -27,6 +28,7 @@
     "expo-constants": "~18.0.6",
     "expo-crypto": "~15.0.7",
     "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "^8.0.10",
     "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -43,6 +45,7 @@
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.2",
     "react-native-webview": "13.15.0",
